# gamito

./: .cursorignore  .gitignore  00-architecture-and-context.md  01-mcp-api-spec.md  02-task-G0-bootstrap.md  03-task-G1-retrieval.md  04-task-G2-persistence.md  05-task-G3-planning-core.md  06-task-G4-mcp-server.md  07-task-G5-corrections-and-lifecycle.md  08-task-G6-hermes-wiring.md  09-task-G7-benchmark.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
data/: README.md
data/index/: manifest.json
docs/: eval_baseline.md
scripts/: build_local_index.py  eval_retrieval.py  seed_demo.py  test
skills/gamito/: SKILL.md
skills/gamito/references/: tool-index.md
src/gamito/: __init__.py  cli.py  config.py
src/gamito/db/: __init__.py  connection.py  custom_recipes.py  pantry.py  plans.py  profiles.py  schema.sql
src/gamito/mcp/: app.py  errors.py  server.py  slots.py
src/gamito/models/: meal.py  pantry.py  planning.py  profile.py
src/gamito/pantry/: canonicalize.py
src/gamito/planning/: __init__.py  edits.py  graph.py  lifecycle.py  state.py
src/gamito/pricing/: __init__.py  canonical_pricing.py
src/gamito/recommendation/: __init__.py  engine.py  tags.py  updater.py
src/gamito/rendering/: __init__.py  compact.py  full.py  labels.py
src/gamito/retrieval/: __init__.py  encoder.py  (+3 more)
tests/: test_budget.py  test_local_recipe_index.py  test_mcp_tools.py  test_pantry_canonicalize.py  test_pantry_shopping.py  test_persistence.py  test_planning_core.py  test_pricing.py  test_recipe_metadata_parsing.py  test_retrieval_filters.py  test_retrieval_metadata.py  test_validator.py
(+15 files in other folders)
