[project]
name = "gamito"
version = "0.5.0"
description = "Fully local Gamito meal-planning engine exposed through MCP tools."
authors = [
    { name = "nerkyzas157", email = "nerijus157@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.5",
    "langgraph>=1.0",
    "mcp>=1.2",
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "pydantic>=2.7",
]

[project.scripts]
gamito = "gamito.cli:main"
gamito-mcp = "gamito.mcp.server:main"

[dependency-groups]
dev = [
    "commitizen>=4.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
tag_format = "v$version"
version_provider = "pep621"
version_files = [
    "src/gamito/__init__.py:__version__",
]
update_changelog_on_bump = true
changelog_incremental = true
changelog_format = "keep_a_changelog"
major_version_zero = true

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
